--- a/index.html
+++ b/index.html
@@ -11,96 +11,108 @@
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,400;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <link rel="stylesheet" href="css/shared/header.css" />
+    <link rel="stylesheet" href="css/shared/films-section.css" />
+    <link rel="stylesheet" href="css/shared/movie-card.css" />
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Find your film</h1>
-      <nav class="header__nav">
-        <a class="header__nav-link" href="watchlist.html">My Watchlist</a>
-      </nav>
-      <form class="header__form">
-        <h2 class="sr-only">Search</h2>
-        <img
-          class="header__form-icon"
-          src="img/search-icon.png"
-          alt=""
-          aria-hidden="true"
-        />
-        <div class="header__form-group">
-          <label class="header__form-label" for="search">Search</label>
-          <input
-            class="header__form-input"
-            type="text"
-            id="search"
-            name="search"
-            placeholder="Search for a film"
-          />
+      <div class="header__inner container">
+        <div class="header__content">
+          <h1 class="header__title">Find your film</h1>
+          <nav class="header__nav">
+            <a class="header__nav-link" href="watchlist.html">My Watchlist</a>
+          </nav>
         </div>
-        <button class="header__form-button" type="submit">Search</button>
-      </form>
-    </header>
-
-    <main>
-      <section class="search-results">
-        <h2 class="sr-only">Search Results</h2>
-        <div class="search-results__start-exploring">
-          <h3 class="search-results__start-exploring-title">Start exploring</h3>
+        <form class="header__form">
+          <h2 class="sr-only">Search</h2>
           <img
-            class="search-results__start-exploring-icon"
-            src="img/film-icon.png"
+            class="header__form-icon"
+            src="img/search-icon.png"
             alt=""
             aria-hidden="true"
           />
-        </div>
-        <ul class="search-results__list">
-          <li class="search-results__item">
-            <article class="movie-card">
-              <div class="movie-card__content">
-                <header class="movie-card__head">
-                  <h3 class="movie-card__title">Blade Runner</h3>
-                  <img
-                    class="movie-card__star"
-                    src="img/star-icon.png"
-                    alt=""
-                    aria-hidden="true"
-                  />
-                  <span class="movie-card__rating" aria-label="rating"
-                    >8.1</span
-                  >
-                </header>
-                <div class="movie-card__details">
-                  <span class="movie-card__length">116 min</span>
-                  <span class="movie-card__categories"
-                    >Drama, Mystery, Sci-Fi</span
-                  >
-                  <button
-                    aria-label="Add to watchlist"
-                    class="movie-card__add-to-watchlist"
-                  >
+          <div class="header__form-group">
+            <label class="header__form-label" for="search">Search</label>
+            <input
+              class="header__form-input"
+              type="text"
+              id="search"
+              name="search"
+              placeholder="Search for a film"
+            />
+          </div>
+          <button class="header__form-button" type="submit">Search</button>
+        </form>
+      </div>
+    </header>
+
+    <main>
+      <section class="films-section">
+        <div class="films-section__inner container">
+          <h2 class="sr-only">Search Results</h2>
+          <div class="films-section__msg-area">
+            <h3 class="films-section__msg-title">Start exploring</h3>
+            <img
+              class="films-section__msg-icon"
+              src="img/film-icon.png"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <ul class="films-section__list">
+            <li class="search-results__item">
+              <article class="movie-card movie-card--btm-border">
+                <div class="movie-card__content">
+                  <header class="movie-card__head">
+                    <h3 class="movie-card__title">Blade Runner</h3>
                     <img
-                      class="movie-card__add-to-watchlist-icon"
-                      src="img/add-to-watchlist.png"
+                      class="movie-card__star"
+                      src="img/star-icon.png"
                       alt=""
                       aria-hidden="true"
                     />
-                    Watchlist >
-                  </button>
+                    <span class="movie-card__rating" aria-label="rating"
+                      >8.1</span
+                    >
+                  </header>
+                  <div class="movie-card__details">
+                    <span class="movie-card__length">116 min</span>
+                    <span class="movie-card__categories"
+                      >Drama, Mystery, Sci-Fi</span
+                    >
+                    <button
+                      aria-label="Add to watchlist"
+                      class="movie-card__add-to-watchlist"
+                    >
+                      <img
+                        class="movie-card__add-to-watchlist-icon"
+                        src="img/add-to-watchlist.png"
+                        alt=""
+                        aria-hidden="true"
+                      />
+                      Watchlist
+                    </button>
+                  </div>
+                  <p class="movie-card__description">
+                    A blade runner must pursue and terminate four replicants who
+                    stole a ship in space, and have returned to Earth to find
+                    their creator.
+                  </p>
                 </div>
-                <p class="movie-card__description">
-                  A blade runner must pursue and terminate four replicants who
-                  stole a ship in space, and have returned to Earth to find
-                  their creator.
-                </p>
-              </div>
-              <img
-                class="movie-card__image"
-                src="img/blade-runner.jpg"
-                alt=""
-                aria-hidden="true"
-              />
-            </article>
-          </li>
-        </ul>
+                <img
+                  class="movie-card__image"
+                  src="img/blade-runner.png"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
